force-apps/deploy/main/default/objects/Professional_Experience__c/Professional_Experience__c.object-meta.xml
<CustomObject>
    <label>Professional Experience</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Professional Experience Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>