force-apps/deploy/main/default/objects/Professional_Experience__c/fields/Achievements__c.field-meta.xml
<CustomField>
    <fullName>Achievements__c</fullName>
    <label>Achievements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>