force-apps/deploy/main/default/objects/Professional_Experience__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Professional Experiences</relationshipLabel>
    <relationshipName>Professional_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>