force-apps/deploy/main/default/objects/Professional_Experience__c/fields/Main_Duties__c.field-meta.xml
<CustomField>
    <fullName>Main_Duties__c</fullName>
    <label>Main Duties</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>